syntax = "proto3";

option java_multiple_files = true;
option java_package = "tarea3";
option java_outer_classname = "BullyProto";
option objc_class_prefix = "SD";

package tarea3;

message ElectionMsg {
	int32 id_hospital = 1;
	int32 id_candidato = 2;
	int32 experiencia = 3;
	int32 estudios = 4;
}

message CoordinadorMsg {
	int32 id_hospital = 1;
}

message Requerimiento {
	int32 id_requerimiento = 1;
	int32 id_paciente = 2;
	string req_type = 3; // enfermedades, tratamientos, examenes o medicamentos
	string req_accion = 4; // agrega (asignados/no_realizados/recetado) o quita (registra como completados/realizado/suministrado)
	string req_data = 5;
}

message OkMsg{
	int32 ok = 1;
}

service Bully {
	rpc IniciaEleccion(ElectionMsg) returns (OkMsg) {}
	rpc AnuncioCoordinacion(CoordinadorMsg) returns (OkMsg) {}
	rpc ModificaPaciente(Requerimiento) returns (OkMsg) {}
}
